# axum-htmx-tailwind-surreal-starter

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
assets/: main.css
src/: main.rs
templates/: another-page.html  base.html  home.html
